--- a/src/main/resources/templates/new-products.html
+++ b/src/main/resources/templates/new-products.html
@@ -5,43 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <title>Create New Product</title>
 </head>
 
 <body>
     <h1>Create new product</h1>
-    <form th:action="@{/save}" th:object="${product}" method="post">
-        Name:<br>
-        <input type="text" th:field="*{name}">
-        <div class="alert alert-warning" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
-        <br>
+    <form th:action="@{/save}" th:object="${product}" method="post" class="form">
+        <div class="form-group">
+            Name:<br>
+            <input class="form-control" type="text" th:field="*{name}">
+            <div class="alert alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
+            <br>
+        </div>
+        <div class="form-group">
+            Brand:<br>
+            <input class="form-control" type="text" th:field="*{brand}">
+            <div class="alert alert-danger" th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></div>
 
-        Brand:<br>
-        <input type="text" th:field="*{brand}">
-        <div class="alert alert-warning" th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></div>
+            <br>
+        </div>
+        <div class="form-group">
 
-        <br>
+            Made in:<br>
+            <input class="form-control" type="text" th:field="*{madein}">
+            <div class="alert alert-danger" th:if="${#fields.hasErrors('madein')}" th:errors="*{madein}"></div>
 
-        Made in:<br>
-        <input type="text" th:field="*{madein}">
-        <div class="alert alert-warning" th:if="${#fields.hasErrors('madein')}" th:errors="*{madein}"></div>
+            <br>
+        </div>
+        <div class="form-group">
 
-        <br>
+            Price:<br>
+            <input class="form-control" type="number" th:field="*{price}">
+            <div class="alert alert-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
 
-        Price:<br>
-        <input type="number" th:field="*{price}">
-        <div class="alert alert-warning" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
+            <br>
+        </div>
+        <input type="submit" class="btn btn-success" value="Add product"/>
 
-        <br>
-        
-         <input type="submit" /> 
-        
     </form>
 </body>
 
