--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,54 +1,93 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html
+  lang="en"
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:th="http://www.thymeleaf.org"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Products</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <title>Document</title>
-</head>
+  </head>
+  <body>
+    <div th:replace="fragments/header :: header"></div>
 
-<body>
-   <div th:replace="fragments/header :: header"></div>
-    
-    <h1>Product List</h1>
-    <a href="new" class="btn btn-primary">Create New Product</a>
-    <br /><br />
-    <table border="1" cellpadding="10" class="table">
+    <div class="container-fluid">
+      <h1>Hello Spring Boot</h1>
+      <a href="new" class="btn btn-primary">Add new product</a>
+      <a
+        onclick="document.forms['logoutform'].submit()"
+        class="nav-item nav-link"
+        >Logout</a
+      >
+
+      <div>
+        Items In Cart
+        <span th:text="${cart.size()}"></span>
+      </div>
+
+      <form id="logoutform" method="POST" action="/logout"></form>
+
+      <hr />
+      <table class="table">
         <thead>
-            <tr>
-                <th>Product ID</th>
-                <th>Name</th>
-                <th>Brand</th>
-                <th>Made In</th>
-                <th>Price</th>
-                <th>Actions</th>
-            </tr>
+          <tr>
+            <th>Product ID</th>
+            <th>Name</th>
+            <th>Brand</th>
+            <th>Made In</th>
+            <th>Price</th>
+            <th>Actions</th>
+          </tr>
         </thead>
         <tbody>
-            <tr th:each="product : ${products}">
-                <td th:text="${product.id}">Product ID</td>
-                <td th:text="${product.name}">Name</td>
-                <td th:text="${product.brand}">Brand</td>
-                <td th:text="${product.madein}">Made in</td>
-                <td th:text="${product.price}">Price</td>
-                <td>
-                    <a class="btn btn-primary" th:href="@{'/edit/' + ${product.id}}">Edit</a>
-                    &nbsp;&nbsp;&nbsp;
-                    <a class="btn btn-danger" onclick="return confirm('Are you sure?');"
-                    th:href="@{'/delete/' + ${product.id}}">Delete</a>
-                </td>
-            </tr>
+          <tr th:each="product : ${products}">
+            <td th:text="${product.id}">Product ID</td>
+            <td th:text="${product.name}">Name</td>
+            <td th:text="${product.brand}">Brand</td>
+            <td th:text="${product.madein}">Made In</td>
+            <td th:text="${product.price}">Price</td>
+            <td>
+              <a th:href="@{'/edit/' + ${product.id}}" class="btn btn-primary"
+                >Edit</a
+              >
+              &nbsp;&nbsp;&nbsp;
+              <a
+                onclick="return confirm('Are you sure?');"
+                class="btn btn-danger"
+                th:href="@{'/delete/' + ${product.id}}"
+                >Delete</a
+              >
+              &nbsp;&nbsp;&nbsp;
+              <form
+                style="display: inline"
+                action="#"
+                th:action="@{'/addToCart/' + ${product.id}}"
+                method="post"
+              >
+                <button class="btn btn-info btn-sm" type="submit">
+                  Add To Cart
+                </button>
+              </form>
+            </td>
+          </tr>
         </tbody>
-    </table>
+      </table>
+    </div>
+
     <div th:replace="fragments/footer :: footer"></div>
 
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
